--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,17 +30,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.4
+  dio: ^5.4.1
   google_maps_flutter: ^2.5.3
   geolocator: ^11.0.0
   provider: ^6.1.1
   location: ^5.0.0
   geocoding: ^2.1.1
-  battery_plus: ^5.0.3
+  battery_plus: ^6.0.0
   perfect_volume_control: ^1.0.5
   record: ^5.0.4
   permission_handler: ^11.3.0
   flutter_sound: ^9.2.13
   camera: ^0.10.1
+  video_player: ^2.6.0
 
 
   # The following adds the Cupertino Icons font to your application.
