--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,12 @@ dependencies:
   flutter_sound: ^9.2.13
   camera: ^0.10.1
   video_player: ^2.6.0
+  flutter_login: ^5.0.0
+  firebase_core: ^2.27.2
+  firebase_auth: ^4.18.0
+  cloud_firestore: ^4.7.0
+  fluttertoast: ^8.2.4
+  get_it: ^7.6.7
 
 
   # The following adds the Cupertino Icons font to your application.
