--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,8 @@ dependencies:
   cloud_firestore: ^4.7.0
   fluttertoast: ^8.2.4
   get_it: ^7.6.7
-
+  flutter_webrtc: ^0.10.4
+  socket_io_client: ^2.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
